# simplex-method

./: .gitignore  CMakeLists.txt
include/: linear_program_solver.h  timer.h  types.h
slides/: algorithm.tex  introduction.tex  main.tex  references.tex  test.tex
src/: linear_program_solver.cc  main.cc  main.cpp
